--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
     "homepage": "https://github.com/yiilivext/yii-debug-panels/",
     "license": "BSD-3-Clause",
     "support": {
-        "issues": "https://github.com/yiisliveext/yii-debug-viewer/issues?state=open",
+        "issues": "https://github.com/yiisliveext/yii-debug-panels/issues?state=open",
         "forum": "https://www.yiiframework.com/forum/",
         "wiki": "https://www.yiiframework.com/wiki/",
         "irc": "irc://irc.freenode.net/yii",
-        "source": "https://github.com/yiisoft/app-api"
+        "source": "https://github.com/yiisoft/yii-debug-panels"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
